trouble getting the columns and rows to align correctly on iphone size

--- a/app/assets/stylesheets/feed.css
+++ b/app/assets/stylesheets/feed.css
@@ -288,6 +288,7 @@ width: 20%;
 }
  .title-span{
       font-size:3vh;
+      margin-left:1vh;
     }
     .feed-image-box{
       width:90vw;
@@ -313,5 +314,14 @@ width: 20%;
     .comments{
       font-size:2vh;
       margin-left:1vh;
+    }
+    .feed-image-bottom-likes{
+          display: flex;
+    flex-direction: row;
+    /* padding-right: 10px; */
+    padding-left: 8px;
+    align-items: center;
+    justify-content: start;
+    align-content: center;
     }
 }
